Edición de -gitignore, EDA y visualizacion

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -369,6 +369,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22f0349c",
+   "metadata": {},
+   "source": [
+    "### 7.5 Distribución estadística del gasto en I+D\n",
+    "\n",
+    "Analizamos la distribución de frecuencias del gasto total y del crecimiento interanual mediante histogramas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99a70df2",
    "metadata": {},
    "source": [
