--- a/notebooks/transformation.ipynb
+++ b/notebooks/transformation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "13879090",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "c9774f9e",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "44e67acf",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "e2120993",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "86efa505",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "3bb356a9",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "d80e3b9a",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "bf0f3052",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "2de4d8cf",
    "metadata": {},
    "outputs": [
@@ -682,7 +682,7 @@
       "======================================================================\n",
       "📌 PRÓXIMO PASO\n",
       "======================================================================\n",
-      "   Ejecutar el notebook 3_eda.ipynb para:\n",
+      "   Ejecutar el notebook eda.ipynb para:\n",
       "   - Análisis visual de tendencias temporales\n",
       "   - Distribución sectorial del gasto\n",
       "   - Impacto de eventos económicos\n",
@@ -712,7 +712,7 @@
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"📌 PRÓXIMO PASO\")\n",
     "print(\"=\"*70)\n",
-    "print(\"   Ejecutar el notebook 3_eda.ipynb para:\")\n",
+    "print(\"   Ejecutar el notebook eda.ipynb para:\")\n",
     "print(\"   - Análisis visual de tendencias temporales\")\n",
     "print(\"   - Distribución sectorial del gasto\")\n",
     "print(\"   - Impacto de eventos económicos\")\n",
