--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "7664ed7d",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "0327000e",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "4f57ec07",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "bad2d048",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "92799223",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "57b60830",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "74c81fcb",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "a1e1a015",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "3bc372e4",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "40885915",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "b435a455",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "c693dfce",
    "metadata": {},
    "outputs": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "id": "dbb7ab79",
    "metadata": {},
    "outputs": [
@@ -1707,6 +1707,60 @@
     "df_fondos_2000_2024.to_csv('../data/consolidatedDataset/fondos_consolidados.csv', index=False)\n",
     "\n",
     "print(\"✅ Datos limpiados guardados en data/cleanedDataset/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a13c5060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "GUARDANDO DATASETS CONSOLIDADOS\n",
+      "======================================================================\n",
+      "\n",
+      "✅ Datos consolidados guardados exitosamente:\n",
+      "   📁 gastos_consolidado.csv: (225, 3)\n",
+      "   📁 fondos_consolidado.csv: (225, 3)\n",
+      "\n",
+      "======================================================================\n",
+      "📌 PRÓXIMO PASO\n",
+      "======================================================================\n",
+      "   Ejecutar el notebook transformation.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================================\n",
+    "# GUARDAR DATASETS CONSOLIDADOS PARA EL SIGUIENTE NOTEBOOK\n",
+    "# ============================================================================\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "# Crear carpeta si no existe\n",
+    "os.makedirs('../data/cleanedDataset', exist_ok=True)\n",
+    "\n",
+    "# Guardar datos consolidados (después del Punto 4)\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"GUARDANDO DATASETS CONSOLIDADOS\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "df_gastos_2000_2024.to_csv('../data/consolidatedDataset/gastos_consolidados.csv', index=False)\n",
+    "df_fondos_2000_2024.to_csv('../data/consolidatedDataset/fondos_consolidados.csv', index=False)\n",
+    "\n",
+    "print(\"\\n✅ Datos consolidados guardados exitosamente:\")\n",
+    "print(f\"   📁 gastos_consolidado.csv: {df_gastos_2000_2024.shape}\")\n",
+    "print(f\"   📁 fondos_consolidado.csv: {df_fondos_2000_2024.shape}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"📌 PRÓXIMO PASO\")\n",
+    "print(\"=\"*70)\n",
+    "print(\"   Ejecutar el notebook transformation.ipynb\")"
    ]
   }
  ],
