Añadir Analisis de última gráfica

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -515,10 +515,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d782a2da",
+   "metadata": {},
+   "source": [
+    "### 7.6 Resiliencia sectorial ante crisis: Fondos vs Gastos\n",
+    "\n",
+    "El análisis del ratio Fondos/Gastos revela **comportamientos muy diferentes** entre sectores ante las crisis:\n",
+    "\n",
+    "#### 🏢 Empresas: Alta volatilidad\n",
+    "- Ratio medio: ~92-95% (gastos > fondos)\n",
+    "- **Crisis 2008**: Caída pronunciada del ratio\n",
+    "- **COVID-19**: Impacto moderado pero visible\n",
+    "- **Comportamiento procíclico**: Reducen inversión drásticamente en crisis\n",
+    "\n",
+    "#### 🏛️ Administración Pública: Estabilidad total\n",
+    "- Ratio medio: ~98-100% (equilibrio perfecto)\n",
+    "- **Crisis 2008**: Sin impacto visible\n",
+    "- **COVID-19**: Sin impacto visible\n",
+    "- **Comportamiento contracíclico**: Mantiene inversión constante independientemente de las crisis\n",
+    "\n",
+    "#### 📊 Implicación clave:\n",
+    "El modelo mixto público-privado (~50-50) proporciona **resiliencia al sistema de I+D**: el sector público actúa como estabilizador durante crisis, mientras que las empresas lideran el crecimiento en expansión. Este equilibrio es fundamental para la robustez del sistema de innovación español."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99a70df2",
    "metadata": {},
    "source": [
-    "### 7.6 Resumen del análisis visual\n",
+    "### 7.7 Resumen del análisis visual\n",
     "\n",
     "**Principales hallazgos:**\n",
     "\n",
@@ -627,7 +652,12 @@
     "- **Empresas** y **Administración Pública**: Principales fuentes de financiación (≈48% y ≈43% respectivamente)\n",
     "- **Resto del Mundo**: Contribución significativa y creciente (≈9% en 2024)\n",
     "- **IPSFL**: Aportación menor pero constante (≈0.7%)\n",
-    "- Balance equilibrado entre financiación pública y privada"
+    "- Balance equilibrado entre financiación pública y privada\n",
+    "\n",
+    "**Resiliencia sectorial ante crisis (ratio Fondos/Gastos):**\n",
+    "- **Admin Pública**: Ratio estable ~98-100%, sin impacto en crisis 2008 ni COVID-19 (estabilizador contracíclico)\n",
+    "- **Empresas**: Ratio volátil ~92-95%, alta sensibilidad a crisis económicas (comportamiento procíclico)\n",
+    "- **Implicación**: El equilibrio público-privado (~50-50) garantiza resiliencia del sistema de I+D"
    ]
   },
   {
@@ -718,6 +748,8 @@
     "5. **Recuperación reciente**: El período 2014-2024 muestra una recuperación sostenida que ha llevado la inversión a máximos históricos, superando ampliamente los niveles pre-crisis de 2008.\n",
     "\n",
     "6. **Internacionalización**: El crecimiento de la financiación del \"Resto del Mundo\" (≈9%) indica una creciente internacionalización de la I+D española y su integración en redes globales de investigación.\n",
+    "\n",
+    "7. **Resiliencia diferencial por sectores**: La Administración Pública mantiene inversión estable (ratio ~100%) independientemente de crisis, actuando como estabilizador. El sector empresarial muestra alta volatilidad ante shocks económicos. El modelo mixto público-privado garantiza la resiliencia del sistema de I+D español.\n",
     "\n",
     "**📊 Fin del análisis exploratorio**\n",
     "\n",
